--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
          <version>2.2</version>
          <configuration>
          <server>tomcat-development-server</server>
-         <url>http://3.236.216.94:8080/manager/html</url>
+         <url>http://3.236.216.94:8080/manager/text</url>
          <warFile>target\petclinic.war</warFile>
          <path>/petclinic</path>
          <username>admin</username>
